--- a/_posts/db/2024-11-17-Milvus3.md
+++ b/_posts/db/2024-11-17-Milvus3.md
@@ -48,7 +48,7 @@ Additionally, after embedding, the data was converted into a dictionary format f
 - `embedding_model = SentenceTransformer(f"./{MODEL_FOLDER}/{EMBED_MODEL}")`
 - `embedding = embedding_model.encode(news, normalize_embeddings=True)`
 
-```bash
+```python
 import pandas as pd
 import numpy as np
 
@@ -80,13 +80,12 @@ extracted_data[0]
   ...]
 ```
 
-## *Insert Data into the Collection*
+## *Insert Entities into the Collection*
 
 - `client.insert(MILVUS_COL_NAME, extracted_data)`
 - `client.flush(MILVUS_COL_NAME)`
-- 
 
-```bash
+```python
 from pymilvus import MilvusClient
 
 client = MilvusClient(uri=MILVUS_URL)
@@ -108,5 +107,5 @@ By checking through the Attu UI, you can verify that the sample data has been in
 Attu UI를 통해 확인해 보면 Collection에 샘플 데이터가  삽입된 것을 확인할 수 있다.
 -->
 
-![Attu UI](/assets/img/db/2024-11-16-Milvus3_1.png)
+![Attu UI](/assets/img/db/2024-11-17-Milvus3_1.png)
 _Attu UI_
