--- a/_posts/db/2024-11-18-Milvus4.md
+++ b/_posts/db/2024-11-18-Milvus4.md
@@ -12,101 +12,185 @@ math: true
 pin: true
 ---
 
-In this post, we will write a statement to insert sample data into the _TennisNews_ collection within the _ds2man_ database created in the previous post.
+In this post, we will explore various methods for querying MilvusDB. For more details, please refer to the [official Milvus website](https://milvus.io/docs/). I will primarily focus on the representative search methods that I have personally used at least once. I'll update this content once I learn more.
 
 <!--
-이번 장에서는 앞장에서 만든 ds2man db내 TennisNews collection에 샘플 데이터를 Insert 하는 구문을 작성하고 한다.
+이번 글에서는 MilvusDB를 조회하는 다양한 방법을 습득해보자. [Milvus 공식 사이트](https://milvus.io/docs/)에 자세히 설명되어 있으니 참고하자. 그중 대표적인(내가 한번이라도 사용한) 검색방법 위주로 설명하겠다. 조금 더 많이 배우면 내용을 업데이트 하겠다.
 -->
 
-## *Prepare Sample Data*
+## *Search*
 
-Let's prepare sample data as shown below.
+#### *Basic ANN Search*
+
+Based on an index file recording the sorted order of vector embeddings, the Approximate Nearest Neighbor (ANN) search locates a subset of vector embeddings based on the query vector carried in a received search request, compares the query vector with those in the subgroup, and returns the most similar results. With ANN search, Milvus provides an efficient search experience.
+The most representative method is [Single-Vector Search](https://milvus.io/docs/single-vector-search.md).
 
 <!--
-아래와 같은 샘플 데이터를 준비해 보자.
+벡터 임베딩의 정렬 순서를 기록하는 인덱스 파일을 기반으로, 근사 최근접(ANN) 검색은 받은 검색 요청에 담긴 쿼리 벡터를 기준으로 일부 벡터 임베딩을 찾고, 해당 하위 그룹 내의 벡터와 쿼리 벡터를 비교하여 가장 유사한 결과를 반환합니다. ANN 검색을 통해 Milvus는 효율적인 검색 경험을 제공합니다.
 -->
 
-- _Sample data_
-  
-| Date       | NewsPaper                  | Topic                     | News |
-|------------|----------------------------|---------------------------|------|
-| 2024-09-09 | MBC                         | 2024 US Open Victory      | Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament. |
-| 2024-09-10 | Yonhap News                 | US Open Victory           | Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament. |
-| 2024-08-03 | Dong-A Ilbo                 | Olympic Final             | Novak Djokovic and Carlos Alcaraz faced off in the men's singles final at the 2024 Paris Olympics. |
-| 2024-08-02 | Newsis                      | Andy Murray's Retirement  | British tennis star Andy Murray concluded his professional career at the 2024 Paris Olympics, sharing a lighthearted retirement message. |
-| 2024-07-03 | Official Olympics Website   | Wimbledon                 | Korea's Kwon Soon-woo was eliminated in the first round of Wimbledon 2024, losing to Denmark's Holger Rune. |
-| 2024-11-13 | Chosun Ilbo                 | ATP Finals Victory        | Jannik Sinner dominated men's tennis in 2024, securing the ATP Finals title. |
+```python
+# Connect to MilvusClient
+milvusClient = MilvusClient(uri=MILVUS_URL)
+milvusClient.using_database(MILVUS_DB_NAME)
 
-Then, the data was extracted in dictionary format for insertion. The key point here is _embedding_. The details of embedding will be covered later (honestly, I’m still updating my knowledge as I study). For now, I will proceed using _bge-m3_, which is widely used for Korean embeddings. The embedding process is simple—just use the following command to perform embedding.    
-Additionally, after embedding, the data was converted into a dictionary format for insertion into the collection.
-
-<!--
-그리고 insert하기 위해서 dictionary 포멧으로 데이터를 추출하였다. 여기에서 중요한 사항은 embedding 이다. embedding에 대한 자세한 사항은 나중에 다루기로 하겠다.(솔직히 공부하면서 업데이트 중이라...) 우선 한국어 임베딩에 많이 사용되는 bge-m3 로 가지고 진행해 보겠다. 임베딩 방식은 간단하다. 아레 명령어를 통해서 embedding하면 된다.    
-추가로 입베딩 후 collection에 insert하기 위해 dictionary 형태로 변환도 진행하였다.
--->
-
-- `embedding_model = SentenceTransformer(f"./{MODEL_FOLDER}/{EMBED_MODEL}")`
-- `embedding = embedding_model.encode(news, normalize_embeddings=True)`
-
-```bash
-import pandas as pd
-import numpy as np
-
-MODEL_FOLDER = 'Pretrained_byGit'
-EMBED_MODEL = "bge-m3"  # BAAI/bge-m3
-
-df = pd.read_excel('.\\Tennis_2024_news.xlsx', engine='openpyxl')
-news = df['News'].tolist()
-
-# Note. embedding like this.
+# Embed the query.
+question = "US Open tennis tournament."
 embedding_model = SentenceTransformer(f"./{MODEL_FOLDER}/{EMBED_MODEL}")
-embedding = embedding_model.encode(news, normalize_embeddings=True)
+vector_embedding = embedding_model.encode([question])
 
-df['News_embedding'] = df['News'].apply(lambda x: embedding_model.encode(x, normalize_embeddings=True).tolist())
+# Retrieve all field names of the collection.
+collection_info = milvusClient.describe_collection(MILVUS_COL_NAME)
+fields = [field["name"] for field in collection_info["fields"]]
 
-# the data convert into a dictionary format for insertion into the collection.
-extracted_data = df.to_dict(orient='records')
-extracted_data[0]
+PROCESSMAP_COSINE_REF = 0.6
+# Basic ANN Search
+vector_res = milvusClient.search(
+    collection_name=MILVUS_COL_NAME,
+    data=vector_embedding, # 1.Basic ANN Search
+    output_fields=fields,
+    limit=4,
+    # search_params={"metric_type": "COSINE", "params": {"radius": PROCESSMAP_COSINE_REF}}, # Note. metric_type and radius
+)
+
+for hits in vector_res:
+    for hit in hits:
+        print(f"Distance: {hit['distance']}, NewsPaper: {hit['entity']['NewsPaper']}, News: {hit['entity']['News']}")
 ```
-
-```
-{'Date': 20240909,
- 'NewsPaper': 'MBC',
- 'Topic': '2024 US Open Victory',
- 'News': "Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament.",
- 'News_embedding': [-0.026207489892840385,
-  0.015767322853207588,
-  -0.05157271400094032,
-  ...]
-```
-
-## *Insert Data into the Collection*
-
-- `client.insert(MILVUS_COL_NAME, extracted_data)`
-- `client.flush(MILVUS_COL_NAME)`
-- 
 
 ```bash
-from pymilvus import MilvusClient
-
-client = MilvusClient(uri=MILVUS_URL)
-client.using_database(MILVUS_DB_NAME)
-
-# Insert data
-insert_result = client.insert(MILVUS_COL_NAME, extracted_data)
-print(f"Inserted count: {insert_result['insert_count']}")
-
-# Note. Persist data into Milvus (Mandatory step)
-client.flush(MILVUS_COL_NAME)
-
-print("Milvus data preparation complete!")
+Distance: 0.6732997894287109, NewsPaper: Yonhap News, News: Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament.
+Distance: 0.6732997894287109, NewsPaper: MBC, News: Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament.
+Distance: 0.5168114900588989, NewsPaper: Chosun Ilbo, News: Jannik Sinner dominated men's tennis in 2024, securing the ATP Finals title.
+Distance: 0.4742506444454193, NewsPaper: Dong-A Ilbo, News: Novak Djokovic and Carlos Alcaraz faced off in the men's singles final at the 2024 Paris Olympics.
 ```
 
-By checking through the Attu UI, you can verify that the sample data has been inserted into the collection.
+#### *Filtered Search*
+
+An ANN search finds vector embeddings most similar to specified vector embeddings. However, the search results may not always be correct. You can include filtering conditions in a search request so that Milvus conducts metadata filtering before conducting ANN searches, reducing the search scope from the whole collection to only the entities matching the specified filtering conditions. There are two methods: `Standard Filtering` and `iterative filtering`. [Filtered Search](https://milvus.io/docs/filtered-search.md)
+
+![Standard Filtering and iterative filtering](/assets/img/db/2024-11-18-Milvus4_1.png)
+_Standard Filtering and iterative filtering_
+
+```python
+# Connect to MilvusClient
+milvusClient = MilvusClient(uri=MILVUS_URL)
+milvusClient.using_database(MILVUS_DB_NAME)
+
+# Embed the query.
+question = "US Open tennis tournament."
+embedding_model = SentenceTransformer(f"./{MODEL_FOLDER}/{EMBED_MODEL}")
+vector_embedding = embedding_model.encode([question])
+
+# Retrieve all field names of the collection.
+collection_info = milvusClient.describe_collection(MILVUS_COL_NAME)
+fields = [field["name"] for field in collection_info["fields"]]
+
+# Filtered Search
+query_filter = "Topic like \'%Victory%\'"
+# query_filter = "Topic like \'%Victory%\' and NewsPaper==\'MBC\'"
+vector_res = milvusClient.search(
+    collection_name=MILVUS_COL_NAME,
+    data=vector_embedding, # 1.Basic ANN Search
+    output_fields=fields,
+    limit=4,
+    filter=query_filter, # 2.Filter Search(Standard Filtering)
+    search_params={ "hints": "iterative_filter" } # 2.Filter Search(iteraive filtering)
+)
+
+for hits in vector_res:
+    for hit in hits:
+        print(f"Distance: {hit['distance']}, Topic: {hit['entity']['Topic']}, NewsPaper: {hit['entity']['NewsPaper']}, News: {hit['entity']['News']}")
+```
+
+```bash
+Distance: 0.6732997894287109, Topic: US Open Victory, NewsPaper: Yonhap News, News: Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament.
+Distance: 0.6732997894287109, Topic: 2024 US Open Victory, NewsPaper: MBC, News: Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament.
+Distance: 0.5168114900588989, Topic: ATP Finals Victory, NewsPaper: Chosun Ilbo, News: Jannik Sinner dominated men's tennis in 2024, securing the ATP Finals title.
+```
+
+#### *Range Search*
+
+A range search improves search result relevancy by restricting the distance or score of the returned entities within a specific range. This page helps you understand what range search is and the procedures to conduct a range search. [Range Search](https://milvus.io/docs/range-search.md)
+
+![Range Search](/assets/img/db/2024-11-18-Milvus4_2.png)
+_Range Search_
+
+```python
+# Connect to MilvusClient
+milvusClient = MilvusClient(uri=MILVUS_URL)
+milvusClient.using_database(MILVUS_DB_NAME)
+
+# Embed the query.
+question = "US Open tennis tournament."
+embedding_model = SentenceTransformer(f"./{MODEL_FOLDER}/{EMBED_MODEL}")
+vector_embedding = embedding_model.encode([question])
+
+# Retrieve all field names of the collection.
+collection_info = milvusClient.describe_collection(MILVUS_COL_NAME)
+fields = [field["name"] for field in collection_info["fields"]]
+
+# Range Search
+query_filter = "Topic like \'%Victory%\'"
+# query_filter = "Topic like \'%Victory%\' and NewsPaper==\'MBC\'"
+PROCESSMAP_COSINE_REF = 0.6
+vector_res = milvusClient.search(
+    collection_name=MILVUS_COL_NAME,
+    data=vector_embedding, # 1.Basic ANN Search
+    output_fields=fields,
+    limit=4,
+    filter=query_filter, # 2.Filter Search
+    search_params={"metric_type": "COSINE", "params": {"radius": PROCESSMAP_COSINE_REF}}, # 3.Range Search
+)
+
+for hits in vector_res:
+    for hit in hits:
+        print(f"Distance: {hit['distance']}, Topic: {hit['entity']['Topic']}, NewsPaper: {hit['entity']['NewsPaper']}, News: {hit['entity']['News']}")
+```
+
+```bash
+Distance: 0.6732997894287109, Topic: US Open Victory, NewsPaper: Yonhap News, News: Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament.
+Distance: 0.6732997894287109, Topic: 2024 US Open Victory, NewsPaper: MBC, News: Jannik Sinner (World No. 1, Italy) clinched the men's singles title at the US Open tennis tournament.
+```
+
+## *Delete Entities*
+
+It's very simple. You just need to change the previously learned search to delete. [Delete](https://milvus.io/docs/delete-entities.md#Delete-Entities)
 
 <!--
-Attu UI를 통해 확인해 보면 Collection에 샘플 데이터가  삽입된 것을 확인할 수 있다.
+매우 단순하다. 앞서 배운 search를 delete로 변경해주기만 하면 된다. [Delete](https://milvus.io/docs/delete-entities.md#Delete-Entities)
 -->
 
-![Attu UI](/assets/img/db/2024-11-16-Milvus3_1.png)
-_Attu UI_
+```python
+# Connect to MilvusClient
+milvusClient = MilvusClient(uri=MILVUS_URL)
+milvusClient.using_database(MILVUS_DB_NAME)
+
+# Embed the query.
+question = "US Open tennis tournament."
+embedding_model = SentenceTransformer(f"./{MODEL_FOLDER}/{EMBED_MODEL}")
+vector_embedding = embedding_model.encode([question])
+
+# Retrieve all field names of the collection.
+collection_info = milvusClient.describe_collection(MILVUS_COL_NAME)
+fields = [field["name"] for field in collection_info["fields"]]
+
+# Range Search
+query_filter = "Topic like \'%Victory%\'"
+# query_filter = "Topic like \'%Victory%\' and NewsPaper==\'MBC\'"
+PROCESSMAP_COSINE_REF = 0.6
+vector_res = milvusClient.delete( # search -> delete
+    collection_name=MILVUS_COL_NAME,
+    data=vector_embedding, # 1.Basic ANN Search
+    output_fields=fields,
+    limit=4,
+    filter=query_filter, # 2.Filter Search
+    search_params={"metric_type": "COSINE", "params": {"radius": PROCESSMAP_COSINE_REF}}, # 3.Range Search
+)
+
+print(vector_res)
+```
+
+```bash
+{'delete_count': 3, 'cost': 0}
+```
