--- a/_posts/python/2025-03-15-Python1.md
+++ b/_posts/python/2025-03-15-Python1.md
@@ -66,19 +66,6 @@ print(os.path.isfile("/home/user/projects/data.txt"))  # True if it's a file
 print(os.path.isdir("/home/user/projects/data"))       # True if it's a directory
 ```
 
-### *os.path.splitext()*
-
-Split File Extension.   
-
-```python
-import os
-
-filename = "/home/user/projects/data.txt"
-name, ext = os.path.splitext(filename)
-print(name)  # "/home/user/projects/data"
-print(ext)   # ".txt"
-```
-
 ### *os.listdir()*
 
 List Files in a Directory.   
@@ -96,12 +83,15 @@ print(os.listdir("/home/user/projects"))  # Returns a list of files and folders
 ### *os.makedirs()*
 
 Create a Directory. For reference, `os.mkdir` is also available, but it cannot create nested directories. If possible, use `os.makedirs` instead.    
+The `exist_ok=True` argument is used in functions like `os.makedirs()` to **prevent errors when a directory already exists**.
 
 ```python
 import os
 
-os.makedirs("parent/child")  # Creates all parent directories if they don’t exist
-os.mkdir("parent/child")  # FileNotFoundError: [WinError 3] 지정된 경로를 찾을 수 없습니다
+# Creates all parent directories if they don’t exist. The `exist_ok=True` argument is used in functions like `os.makedirs()` to prevent errors when a directory already exists.
+os.makedirs("parent/child", exist_ok=True)  
+# FileNotFoundError: [WinError 3] 지정된 경로를 찾을 수 없습니다
+os.mkdir("parent/child")  
 ```
 
 ### *os.remove()*
@@ -139,6 +129,45 @@ print(os.environ.get("USERPROFILE"))  # Windows, C:\Users\ycjang
 ```
 
 ## *Path Handling Module*
+
+### *os.path.splitext()*
+
+Split File Extension.   
+
+```python
+import os
+
+filename = "/home/user/projects/data.txt"
+name, ext = os.path.splitext(filename)
+print(name)  # "/home/user/projects/data"
+print(ext)   # ".txt"
+```
+
+### *os.path.split()*
+
+Splits the path into (directory, filename).
+
+```python
+import os
+
+filename = "/home/user/data/data.txt"
+directory, file_name  = os.path.split(filename)
+print(directory)  # "/home/user/data"
+print(file_name )   # "data.txt"
+
+# If there is no trailing slash (`/`), the last element is returned as the "filename."
+filename = "/home/user/data/mydata"
+directory, file_name = os.path.split(filename)
+print(directory)  # "/home/user/data"
+print(file_name)   # "mydata"
+
+# If there is a trailing slash (`/`), the last element is recognized as a directory, and an empty string (`""`) is returned.
+filename = "/home/user/data/mydata/"
+directory, file_name = os.path.split(filename)
+print(directory)  # "/home/user/data"
+print(file_name)   # ""
+```
+
 
 ### *os.path.dirname()*
 
