--- a/_posts/python/2025-03-15-Python1.md
+++ b/_posts/python/2025-03-15-Python1.md
@@ -152,20 +152,20 @@ import os
 
 filename = "/home/user/data/data.txt"
 directory, file_name  = os.path.split(filename)
-print(directory)  # "/home/user/data"
-print(file_name )   # "data.txt"
+print(directory) # "/home/user/data"
+print(file_name) # "data.txt"
 
 # If there is no trailing slash (`/`), the last element is returned as the "filename."
 filename = "/home/user/data/mydata"
 directory, file_name = os.path.split(filename)
-print(directory)  # "/home/user/data"
-print(file_name)   # "mydata"
+print(directory) # "/home/user/data"
+print(file_name) # "mydata"
 
 # If there is a trailing slash (`/`), the last element is recognized as a directory, and an empty string (`""`) is returned.
 filename = "/home/user/data/mydata/"
 directory, file_name = os.path.split(filename)
-print(directory)  # "/home/user/data"
-print(file_name)   # ""
+print(directory) # "/home/user/data"
+print(file_name) # ""
 ```
 
 
@@ -225,7 +225,7 @@ print(path) # /home/user/data/file.txt
 
 # Windows
 path = os.path.join("/home/user", "data", "file.txt")
-print(path) # "/home/user/data/file.txt"
+print(path) # /home/user\data\file.txt
 path = path.replace("\\", "/")
 print(path) # /home/user\data\file.txt
 ```
