--- a/_posts/python/2025-03-15-Python1.md
+++ b/_posts/python/2025-03-15-Python1.md
@@ -3,7 +3,7 @@ title: Learning how to use `os` module.
 description: Let's use `os` module.
 author: DS2Man
 date: 2025-03-15 11:00:00 +0000
-categories: [Python, Grammer]
+categories: [Grammer, Python]
 tags:
   - Python
   - Grammer
