--- a/_posts/python/2025-03-15-Python1.md
+++ b/_posts/python/2025-03-15-Python1.md
@@ -197,7 +197,7 @@ parts = path.split('/')
 print(f'parts:{parts}') # ['', 'home', 'user', 'data']
 ```
 
-### *os.path.basename(target)*
+### *os.path.basename()*
 
 Returns only the filename.    
 
