--- a/_posts/python/2025-03-01-Python1.md
+++ b/_posts/python/2025-03-01-Python1.md
@@ -1,5 +1,5 @@
 ---
-title: `os` module.
+title: How to use `os` module.
 description: Let's use `os` module.
 author: DS2Man
 date: 2025-03-01 11:00:00 +0000
