--- a/_posts/python/2025-03-03-Python3.md
+++ b/_posts/python/2025-03-03-Python3.md
@@ -1,5 +1,5 @@
 ---
-title: `from typing import Dict, Any, Optional`
+title: from typing import Dict, Any, Optional
 description: Let's use `typing`.
 author: DS2Man
 date: 2025-03-03 11:00:00 +0000
