--- a/_posts/llm&rag/2025-02-11-RAG7.md
+++ b/_posts/llm&rag/2025-02-11-RAG7.md
@@ -1,6 +1,6 @@
 ---
-title: Learning how to use prompt files with ChatOllama.
-description: Let's load a prompt files and build LangChain with ChatOllama.
+title: Learning how to use prompts with ChatOllama.
+description: Let's create a prompt manually and build LangChain with ChatOllama.
 author: DS2Man
 date: 2025-02-11 11:00:00 +0000
 categories: [LLM&RAG, L&R-Understanding]
@@ -14,54 +14,43 @@ math: true
 pin: true
 ---
 
-In the previous post, I used `ChatOllama()` to apply various general prompts and conversational prompts to configure LangChain. Since prompts can be reused in various roles in the future, they should be managed as prompt files for better utilization. In this post, I will share examples using the **load_prompt()** method and the custom **load_chat_prompt()** method I created.
+In the previous post, I used `ChatBrainAI()` to apply various general prompts and conversational prompts to configure LangChain. Going forward, I plan to build all projects using **ChatOllama()**.   
+In the this post, I aim to apply general prompts and conversational prompts to configure LangChain.  Additionally, both general and conversational prompts seem to work in the same format across most LLM models supported by Ollama. Thanks to optimization for supported models, the inference speed is notably fast.
 
 <!--
-이전 글에서는 ChatOllama()를 활용해서 다양한 일반형 Prompt와 대화형 Prompt를 적용, LangChain을 구성했었다.
-Prompt는 앞으로 역활에 따라 다양하게 재사용될 수 있기 때문에, Prompt file로 관리하여, 활용해야 할것이다.
-이번글에서는 load_prompt() 메서드와 내가 만든 load_chat_prompt() 매서드를 활용한 예제를 공유하겠다.
+이전 글에서는 ChatBrainAI()를 활용해서 다양한 일반형 Prompt와 대화형 Prompt를 적용, LangChain을 구성했었다.
+앞으로는 ChatOllama()를 활용해서 모든 프로젝트를 구성하려고 한다. 
+이번글에서는 일반형 Prompt와 대화형 Prompt를 적용, LangChain을 구성하고자 한다. 
+추가로, 일반형/대화형 Prompt 모두 Ollama에서 지원하는 대부분의 LLM 모델에서 동일한 포멧으로 동작하는 것으로 보인다. 지원모델을 최적화한 이유로 추론 속도가 매우 빠른 편이다.
 -->
 
-## *Directory*
-
-~~~bash
-└── ai 
- ├── local
- │ └── langchain_brainai.py 
- │  ├── ChatBrainAI(AIModelBase)
- │  ├── stream_response()
- │  ├── invoke_response()
- │  └── load_chat_prompt()
- └── aibase.py
-   └── AIModelBase(metaclass=ABCMeta)
-~~~
-
-## *Applying PromptTemplate Files*
+## *Applying PromptTemplate*
 
 - Testing Model : gemma2:latest, llama3.2-vision:latest, llava:7b, gemma:7b, deepseek-r1:14b
 
 ~~~python
 from langchain_ollama import ChatOllama
-from langchain_core.prompts import load_prompt
 from ai.local.langchain_brainai import stream_response, invoke_response
 from langchain_core.prompts import PromptTemplate
 
 selected_model = "gemma2:latest"
-selected_model_catogory = "OpenAI&Ollama"
 llm = ChatOllama(model=selected_model)
 
-prompt = load_prompt(f"prompts/{selected_model_catogory}/basic.yaml")
-# [basic.yaml]
-# _type: "prompt"
-# template: |
-#   #System:
-#   You are a friendly AI assistant. Your name is DS2Man. Please answer questions briefly.
-#
-#   #Question: 
-#   {question}
-#  
-#   #Answer:
-# input_variables: ["question"]
+template = """
+#System:
+You are a friendly AI assistant. Your name is DS2Man. Please answer questions briefly.
+#Question:
+{question}
+#Answer:
+"""
+# The format below also works.
+# template = """You are a friendly AI assistant. Your name is DS2Man. Please answer questions briefly.
+# {question}
+# """
+
+prompt = PromptTemplate.from_template(
+    template
+) 
 
 chain = prompt | llm
 
@@ -77,36 +66,26 @@ stream_response(response)
 The capital of the United States is Washington, D.C.
 ```
 
-## *Applying ChatPromptTemplate Files*
+## *Applying ChatPromptTemplate*
 
 - Testing Model : gemma2:latest, llama3.2-vision:latest, llava:7b, gemma:7b, deepseek-r1:14b
 
 ~~~python
+from langchain_ollama import ChatOllama
+from ai.local.langchain_brainai import stream_response, invoke_response
 from langchain_core.prompts import ChatPromptTemplate
 
-def load_chat_prompt(file_path, encoding="utf-8"):
-    with open(file_path, "r", encoding=encoding) as f:
-        prompt_messages = [(item["role"], item["message"]) for item in json.load(f)]
-
-        prompt = ChatPromptTemplate.from_messages(prompt_messages)
-
-        return prompt
-~~~
-
-~~~python
-from langchain_ollama import ChatOllama
-from ai.local.langchain_brainai import stream_response, invoke_response, load_chat_prompt
-
 selected_model = "gemma2:latest"
-selected_model_catogory = "OpenAI&Ollama"
 llm = ChatOllama(model=selected_model)
 
-prompt = load_chat_prompt(f"prompts/{selected_model_catogory}/basic_chat.json")
-# [basic_chat.json]
-# [
-#   {"role": "system", "message": "You are a friendly AI assistant. Your name is DS2Man. Please answer questions briefly."},
-#   {"role": "human", "message": "{question}"}
-# ]
+template =  [
+    ("system", "You are a friendly AI assistant. Your name is DS2Man. Please answer questions briefly."),
+    ("human", "{question}")
+]
+
+prompt = ChatPromptTemplate.from_messages(
+    template
+)
 
 chain = prompt | llm
 
