--- a/_posts/llm&rag/2025-02-10-RAG6-Daily.md
+++ b/_posts/llm&rag/2025-02-10-RAG6-Daily.md
@@ -1,6 +1,6 @@
 ---
-title: Learning how to use prompts with ChatOllama.
-description: Let's create a prompt manually and build LangChain with ChatOllama.
+title: Comparison Between Models.
+description: Let's compare between models registered in Ollama
 author: DS2Man
 date: 2025-02-10 11:00:00 +0000
 categories: [LLM&RAG, L&R-Understanding]
@@ -30,6 +30,7 @@ From the next post, we will be learning various technologies. It would be useful
 <!--
 - 질문 : AI의 미래에 대해 100자 내외로 알려줘.
 --> 
+
 |Attribute|Model|Param|Size<br>(GB)|VRAM Usage<br>(GB)|architecture|quantization|
 |---|---|:---:|:---:|:---:|:---:|:---:|
 |General|Llama-3.2-3B-Instruct|-|-|9.6|-|-|
@@ -43,7 +44,7 @@ From the next post, we will be learning various technologies. It would be useful
 |Ollama|deepseek-r1:7b|7b|4.7|5.6|qwen2|Q4_K_M|
 
 
-```bash
+```
 PS C:\Users\ycjang> ollama show gemma3:12b
   Model
     architecture        gemma3
