--- a/_posts/python/2025-03-01-Python1.md
+++ b/_posts/python/2025-03-01-Python1.md
@@ -1,5 +1,5 @@
 ---
-title: import os.
+title: import os
 description: Let's use `os` module.
 author: DS2Man
 date: 2025-03-01 11:00:00 +0000
@@ -61,7 +61,6 @@ Check if it’s a File or a Directory.
 ```python
 import os
 
-import os
 print(os.path.isfile("/home/user/projects/data.txt"))  # True if it's a file
 print(os.path.isdir("/home/user/projects/data"))       # True if it's a directory
 ```
@@ -205,13 +204,13 @@ import os
 
 filename = "/home/user/projects/data/file.txt"
 name, ext = os.path.splitext(filename)
-print(name)  # "/home/user/projects/data/file"
-print(ext)   # ".txt"
+print(name) # "/home/user/projects/data/file"
+print(ext)  # ".txt"
 
 filename = "/home/user/projects/data/file.tar.gz"
 name, ext = os.path.splitext(filename)
-print(name)  # "/home/user/projects/data/file.tar"
-print(ext)   # ".gz"
+print(name)  # "/home/user/projects/data/file.tar"
+print(ext)   # ".gz"
 ```
 
 ### *os.path.split()*
