--- a/_posts/python/2025-03-02-Python2.md
+++ b/_posts/python/2025-03-02-Python2.md
@@ -1,5 +1,5 @@
 ---
-title: raise.
+title: raise
 description: Let's use `raise`.
 author: DS2Man
 date: 2025-03-02 11:00:00 +0000
@@ -58,7 +58,7 @@ You can define your own exception class by inheriting from `Exception` and then 
 
 ```python
 def divide(a, b):
-    if b == 0:
+	if b == 0:
         raise ZeroDivisionError("Division by zero is not allowed.")
     return a / b
 
@@ -105,9 +105,9 @@ ValueError: invalid literal for int() with base 10: 'abc'
 
 ```python
 try:
-    x = int("abc")  # This will cause a ValueError
+    x = int("abc") # This will cause a ValueError
 except Exception as e:
-    raise e
+    raise e
 ```
 
 ```
@@ -129,9 +129,9 @@ ValueError: invalid literal for int() with base 10: 'abc'
 
 ```python
 try:
-    x = int("abc")  # This will cause a ValueError
+    x = int("abc") # This will cause a ValueError
 except ValueError as e:
-    raise e
+    raise e
 ```
 
 ```
@@ -156,9 +156,9 @@ ValueError: invalid literal for int() with base 10: 'abc'
 
 ```python
 try:
-    x = int("abc")  # This will cause a ValueError
+    x = int("abc") # This will cause a ValueError
 except ZeroDivisionError as e:
-    raise e
+    raise e
 ```
 
 ```
