--- a/_posts/llm&rag/Ollama/2025-02-10-Ollama1.md
+++ b/_posts/llm&rag/Ollama/2025-02-10-Ollama1.md
@@ -61,7 +61,7 @@ Created symlink /etc/systemd/system/default.target.wants/ollama.service → /etc
 
 ### *Summary*
 
-|Model|Parameters|Size|
+|Category|Windows|Unbuntu(WSL)|
 |---|---|---|
 |Install|OllamaSetup.exe|curl -fsSL https://ollama.com/install.sh \| sh|
 |File Location|C:\Users\ycjang\.ollama\models|/usr/share/ollama/.ollama/models|
@@ -74,7 +74,7 @@ You can download the LLM model you want to use by running the `ollama pull` or
     `ollama pull gemma3`  
     For reference, the location where the model is stored is as follows.  
     Windows : `C:\Users\ycjang\.ollama\models\`    
-    Ubuntu : `/usr/share/ollama/.ollama/models/`
+    Ubuntu(WSL) : `/usr/share/ollama/.ollama/models/`
 - 2.You can check the LLM models managed by Ollama using the following command.  
     `ollama list`
 - 3.The command to delete an LLM model is as follows, and you can verify that the files in `C:\Users\ycjang\.ollama\models\` and `/usr/share/ollama/.ollama/models/` have been removed.  
