--- a/_posts/llm&rag/Ollama/2025-02-10-Ollama1.md
+++ b/_posts/llm&rag/Ollama/2025-02-10-Ollama1.md
@@ -27,7 +27,10 @@ For reference, since Deepseek became a hot topic after the Ollama post, I update
 
 ## *Install Ollama*
 
-It's very simple.
+Ollama has been briefly mentioned in previous posts. Feel free to check them out.    
+It's very simple.    
+[(Option) Ollama on Ubuntu](/posts/Docker-Setup7)
+[LangChain using ChatOllama](/posts/RAG3)
 
 ### *Install Ollama on Windows*
 
