--- a/_posts/llm&rag/Ollama/2025-02-14-Ollama4.md
+++ b/_posts/llm&rag/Ollama/2025-02-14-Ollama4.md
@@ -1,6 +1,6 @@
 ---
-title: Learning how to connect Ollama.
-description: Let's connect Ollama in Server.
+title: Setup Ollama on a specific server.
+description: Let's setup Ollama on a specific server.
 author: DS2Man
 date: 2025-02-14 11:00:00 +0000
 categories: [LLM&RAG, L&R-Ollama]
@@ -18,14 +18,9 @@ I'll write this post taking several scenarios into consideration.
 몇가지 상황을 고려해서 글을 쓰도록 하겠다.
 -->
 
-- **(Case 1) Let’s pull the Ollama image and run the container on a specific server.**
+- _**(Case 1) Let’s pull the Ollama image and run the container on a specific server.**_
 - (Case 2) Automatically load a pre-specified LLM model when running the Ollama container on a specific server.
 - (Case 3) Automatically load a pre-specified LLM model when running the Ollama container on a specific **isolated (air-gapped)** server.
-
-<!--
-다음과 같이 가졍하고 진행하겠다.
-(상황1)특정 서버에서 운영한다고 가정하고 ollama image를 가져와서 container 를 실행해 보자.
--->
 
 ## *Confirmed that the Ollama image exists on Docker Hub*
 
