--- a/_posts/llm&rag/Ollama/2025-02-17-Ollama7(ing).md
+++ b/_posts/llm&rag/Ollama/2025-02-17-Ollama7(ing).md
@@ -1,6 +1,6 @@
 ---
-title: Learning how to connect Ollama.
-description: Let's connect Ollama in Server.
+title: OpenWebUI
+description: Let's use OpenWebUI.
 author: DS2Man
 date: 2025-02-17 11:00:00 +0000
 categories: [LLM&RAG, L&R-Ollama]
