--- a/_posts/llm&rag/Ollama/2025-02-13-Ollama3.md
+++ b/_posts/llm&rag/Ollama/2025-02-13-Ollama3.md
@@ -1,6 +1,6 @@
 ---
 title: Learning how to connect Ollama.
-description: Let's connect Ollama in Server.
+description: Let's connect Ollama on Server.
 author: DS2Man
 date: 2025-02-10 11:00:00 +0000
 categories: [LLM&RAG, L&R-Ollama]
