--- a/_posts/db/2024-11-15-Milvus1.md
+++ b/_posts/db/2024-11-15-Milvus1.md
@@ -1,6 +1,6 @@
 ---
-title: Introduce and Install Milvus
-description: Let's install Milvus.
+title: Introduce and Install Milvus and MinIO and Attu
+description: Let's install Milvus and MinIO and Attu.
 author: DS2Man
 date: 2024-11-15 11:00:00 +0000
 categories: [DB, Milvus]
@@ -43,7 +43,7 @@ DB-Engines Ranking 웹사이트에 따르면 Milvus, Pinecone, Chroma 등 다양
 ![Milvus Architecture](/assets/img/db/2024-11-15-Milvus1_1.png)
 _Milvus Architecture(Source: [Milvus Architecture](https://milvus.io/docs/architecture_overview.md))_
 
-## *Install Milvus*
+## *Install Milvus and MinIO and Attu*
 
 The [Milvus GitHub Releases page](https://github.com/milvus-io/milvus/releases) is where you can check and download the official release versions of **Milvus**. Here, you can find both the latest and previous versions of Milvus. It provides a `docker-compose-gpu.yml` file, which includes not only **Milvus Standalone** but also the installation of **etcd** and **MinIO**. The reason for installing `etcd` and `MinIO` together seems to be related to **Milvus's architecture**. Looking at the Milvus architecture, the **Standalone mode** runs as a single instance, but internally, it still requires **metadata management (etcd)** and **object storage (MinIO)**.
 
