--- a/_posts/llm&rag/Ollama/2025-02-16-Ollama6.md
+++ b/_posts/llm&rag/Ollama/2025-02-16-Ollama6.md
@@ -85,7 +85,7 @@ MODELS=("gemma3:1b")
 
 # MinIO server info
 # Need to find a way to handle private buckets...!!!!
-MINIO_URL="localhost:9000"  # 127.0.0.1:9000, localhost:9000 vs milvus-minio:9000
+MINIO_URL="milvus-minio:9000"  # 127.0.0.1:9000, localhost:9000 vs milvus-minio:9000
 BUCKET="ds2man"
 MODEL_PATH="ollama_models"
 DEST_DIR="/root/.ollama/models"
