--- a/_posts/llm&rag/Ollama/2025-02-14-Ollama4.md
+++ b/_posts/llm&rag/Ollama/2025-02-14-Ollama4.md
@@ -1,6 +1,6 @@
 ---
-title: Setup Ollama on a specific server.
-description: Let's setup Ollama on a specific server.
+title: Setup Ollama on a server.
+description: Let's run Ollama Container on a server.
 author: DS2Man
 date: 2025-02-14 11:00:00 +0000
 categories: [LLM&RAG, L&R-Ollama]
