--- a/_posts/llm&rag/Ollama/2025-02-16-Ollama6.md
+++ b/_posts/llm&rag/Ollama/2025-02-16-Ollama6.md
@@ -1,6 +1,6 @@
 ---
-title: Setup Custom Ollama on a specific isolated (air-gapped) server.
-description: Let's setup Custom Ollama Container on a specific isolated (air-gapped) server.
+title: Setup Ollama on a specific isolated (air-gapped) server.
+description: Let's run Ollama Container on a specific isolated (air-gapped) server.
 author: DS2Man
 date: 2025-02-16 11:00:00 +0000
 categories: [LLM&RAG, L&R-Ollama]
@@ -14,7 +14,7 @@ In this post, I'll focus on the third scenario.
 
 - [(Case 1) Let’s pull the Ollama image and run the container on a specific server.](/posts/Ollama4)
 - [(Case 2) Automatically load a pre-specified LLM model when running the Ollama container on a specific server.](/posts/Ollama5)
-- _**(Case 3) Automatically load a pre-specified LLM model when running the Ollama container on a specific **isolated (air-gapped)** server.**_
+- _**(Case 3) Automatically load a pre-specified LLM model when running the Ollama container on a specific isolated (air-gapped) server.**_
 
 
 ## *Select base image on Docker Hub*
@@ -141,51 +141,30 @@ wait -n
 
 - `docker build -t ollama-gpu .`
 
-
 ```bash
 (base) jaoneol@DESKTOP-B7GM3C5:~/dcai$ docker build -t ollama-gpu .
-
 [+] Building 56.9s (10/10) FINISHED                                                                                                                                       docker:default
-
  => [internal] load build definition from dockerfile                                                                                                                                0.0s
-
  => => transferring dockerfile: 2.42kB                                                                                                                                              0.0s
-
  => [internal] load metadata for docker.io/nvidia/cuda:12.6.3-cudnn-runtime-ubuntu22.04                                                                                             0.7s
-
  => [internal] load .dockerignore                                                                                                                                                   0.0s
-
  => => transferring context: 2B                                                                                                                                                     0.0s
-
  => CACHED [1/5] FROM docker.io/nvidia/cuda:12.6.3-cudnn-runtime-ubuntu22.04@sha256:5f0d2d827f6436b3cb7468fd8acbdc8c1d41261614e579ae49afe6141da51133                                0.0s
-
  => [internal] load build context                                                                                                                                                   0.0s
-
  => => transferring context: 48B                                                                                                                                                    0.0s
-
  => [2/5] RUN apt-get update && apt-get install -y     curl     wget     rsync     ca-certificates     && rm -rf /var/lib/apt/lists/*                                              14.1s
-
  => [3/5] RUN curl -fsSL https://ollama.com/install.sh | sh                                                                                                                        38.1s
-
  => [4/5] COPY entrypoint_imake-ollama.sh /entrypoint_imake-ollama.sh                                                                                                               0.0s
-
  => [5/5] RUN chmod +x /entrypoint_imake-ollama.sh                                                                                                                                  0.2s
-
  => exporting to image                                                                                                                                                              3.5s
-
  => => exporting layers                                                                                                                                                             3.5s
-
  => => writing image sha256:7b76567481ca3f3351ed2451ccf0c6d71d03c687c0330eebf8f5bd5d1e63e1f0                                                                                        0.0s
-
  => => naming to docker.io/library/ollama-gpu                                                                                                                                       0.0s
 
 (base) jaoneol@DESKTOP-B7GM3C5:~/dcai$ docker images
-
 REPOSITORY            TAG                            IMAGE ID       CREATED          SIZE
-
 ollama-gpu            latest                         7b76567481ca   41 seconds ago   6.64GB
 ```
-
 
 ## *Run the Ollama Container*
 
@@ -199,13 +178,11 @@ There’s one important thing to note. I’m running the MinIO container on my l
 
 ```bash
 (base) jaoneol@DESKTOP-B7GM3C5:~/dcai$ docker run -d --gpus all --network milvus -v ollama_models:/root/.ollama/ -p 11434:11434 --name ollama-gpu ollama-gpu
-
 dd4b40438dd07ca86426dbc7c6643a561cbe2aea27751c3fcbbf2a525ebf316c
 
 (base) jaoneol@DESKTOP-B7GM3C5:~/dcai$ docker ps -s
 
 CONTAINER ID   IMAGE                                      COMMAND                  CREATED          STATUS                  PORTS                                                                                      NAMES               SIZE
-
 89697f4cc367   ollama-gpu                                 "/entrypoint_imake-o…"   25 minutes ago   Up 25 minutes           0.0.0.0:11434->11434/tcp, :::11434->11434/tcp                                              ollama-gpu          20.2kB (virtual 6.64GB)
 ```
 
@@ -219,61 +196,35 @@ After running the container, let’s check the following:
 
 ```bash
 (base) jaoneol@DESKTOP-B7GM3C5:~/dcai$ docker exec -it ollama-gpu nvidia-smi
-
 Fri Mar 21 22:46:31 2025
-
 +-----------------------------------------------------------------------------------------+
-
 | NVIDIA-SMI 560.35.02              Driver Version: 560.94         CUDA Version: 12.6     |
-
 |-----------------------------------------+------------------------+----------------------+
-
 | GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |
-
 | Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |
-
 |                                         |                        |               MIG M. |
-
 |=========================================+========================+======================|
-
 |   0  NVIDIA GeForce RTX 4070 ...    On  |   00000000:01:00.0  On |                  N/A |
-
 |  0%   39C    P8              9W /  220W |    1928MiB /  12282MiB |      0%      Default |
-
 |                                         |                        |                  N/A |
-
 +-----------------------------------------+------------------------+----------------------+
 
-  
-
 +-----------------------------------------------------------------------------------------+
-
 | Processes:                                                                              |
-
 |  GPU   GI   CI        PID   Type   Process name                              GPU Memory |
-
 |        ID   ID                                                               Usage      |
-
 |=========================================================================================|
-
 |    0   N/A  N/A         7      C   /ollama                                     N/A      |
-
 |    0   N/A  N/A         8      C   /milvus                                     N/A      |
-
 |    0   N/A  N/A        31      G   /Xwayland                                   N/A      |
-
 |    0   N/A  N/A        73      C   /ollama                                     N/A      |
-
 +-----------------------------------------------------------------------------------------+
 
 (base) jaoneol@DESKTOP-B7GM3C5:~/dcai$ docker exec -it ollama-gpu ollama list
-
 NAME         ID              SIZE      MODIFIED
-
 gemma3:1b    2d27a774bc62    815 MB    5 minutes ago
 
 (base) jaoneol@DESKTOP-B7GM3C5:~/dcai$ docker volume inspect ollama_models
-[
     {
         "CreatedAt": "2025-03-22T07:33:30+09:00",
         "Driver": "local",
